exports[`AppNavButton renders a disabled component 1`] = `
<button
  onClick={undefined}
  style={
    Object {
      "background": "transparent",
      "border": 0,
      "color": "var(--Clouds-Dark)",
      "cursor": "pointer",
      "fontSize": "2rem",
      "height": 50,
      "lineHeight": 1,
      "minWidth": 50,
      "padding": 0,
    }
  }>
  <svg
    fill="currentColor"
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "color": undefined,
        "verticalAlign": "top",
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m14.8 20v-8.6h-5.7v5.7q0 1.2 0.8 2.1t2 0.8h2.9z m22.8 10v4.3h-25.7v-4.3l2.9-4.3h-2.9q-3.5 0-6-2.5t-2.5-6.1v-7.1l-1.5-1.4 0.7-2.9h10.8l0.7-2.8h21.4l0.7 4.2-1.4 0.8v17.8z" />
    </g>
  </svg>
  <br />
  <div
    style={
      Object {
        "color": "var(--Clouds-Dark)",
        "fontFamily": "Roboto Mono, monospace",
        "fontSize": ".8rem",
        "lineHeight": 1.5,
        "textTransform": "uppercase",
      }
    }>
    LABEL
  </div>
</button>
`;

exports[`AppNavButton renders an active component 1`] = `
<button
  onClick={undefined}
  style={
    Object {
      "background": "transparent",
      "border": 0,
      "color": "var(--Concrete)",
      "cursor": "pointer",
      "fontSize": "2rem",
      "height": 50,
      "lineHeight": 1,
      "minWidth": 50,
      "padding": 0,
    }
  }>
  <svg
    fill="currentColor"
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "color": undefined,
        "verticalAlign": "top",
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m14.8 20v-8.6h-5.7v5.7q0 1.2 0.8 2.1t2 0.8h2.9z m22.8 10v4.3h-25.7v-4.3l2.9-4.3h-2.9q-3.5 0-6-2.5t-2.5-6.1v-7.1l-1.5-1.4 0.7-2.9h10.8l0.7-2.8h21.4l0.7 4.2-1.4 0.8v17.8z" />
    </g>
  </svg>
  <br />
  <div
    style={
      Object {
        "color": "var(--Concrete)",
        "fontFamily": "Roboto Mono, monospace",
        "fontSize": ".8rem",
        "lineHeight": 1.5,
        "textTransform": "uppercase",
      }
    }>
    LABEL
  </div>
</button>
`;

exports[`AppNavButton renders an enabled component 1`] = `
<button
  onClick={undefined}
  style={
    Object {
      "background": "transparent",
      "border": 0,
      "color": "var(--Silver)",
      "cursor": "pointer",
      "fontSize": "2rem",
      "height": 50,
      "lineHeight": 1,
      "minWidth": 50,
      "padding": 0,
    }
  }>
  <svg
    fill="currentColor"
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "color": undefined,
        "verticalAlign": "top",
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m14.8 20v-8.6h-5.7v5.7q0 1.2 0.8 2.1t2 0.8h2.9z m22.8 10v4.3h-25.7v-4.3l2.9-4.3h-2.9q-3.5 0-6-2.5t-2.5-6.1v-7.1l-1.5-1.4 0.7-2.9h10.8l0.7-2.8h21.4l0.7 4.2-1.4 0.8v17.8z" />
    </g>
  </svg>
  <br />
  <div
    style={
      Object {
        "color": "var(--Silver)",
        "fontFamily": "Roboto Mono, monospace",
        "fontSize": ".8rem",
        "lineHeight": 1.5,
        "textTransform": "uppercase",
      }
    }>
    LABEL
  </div>
</button>
`;

exports[`AppNavButton renders an inactive component 1`] = `
<button
  onClick={undefined}
  style={
    Object {
      "background": "transparent",
      "border": 0,
      "color": "var(--Silver)",
      "cursor": "pointer",
      "fontSize": "2rem",
      "height": 50,
      "lineHeight": 1,
      "minWidth": 50,
      "padding": 0,
    }
  }>
  <svg
    fill="currentColor"
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "color": undefined,
        "verticalAlign": "top",
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m14.8 20v-8.6h-5.7v5.7q0 1.2 0.8 2.1t2 0.8h2.9z m22.8 10v4.3h-25.7v-4.3l2.9-4.3h-2.9q-3.5 0-6-2.5t-2.5-6.1v-7.1l-1.5-1.4 0.7-2.9h10.8l0.7-2.8h21.4l0.7 4.2-1.4 0.8v17.8z" />
    </g>
  </svg>
  <br />
  <div
    style={
      Object {
        "color": "var(--Silver)",
        "fontFamily": "Roboto Mono, monospace",
        "fontSize": ".8rem",
        "lineHeight": 1.5,
        "textTransform": "uppercase",
      }
    }>
    LABEL
  </div>
</button>
`;

exports[`AppNavButton renders the component 1`] = `
<button
  onClick={undefined}
  style={
    Object {
      "background": "transparent",
      "border": 0,
      "color": "var(--Silver)",
      "cursor": "pointer",
      "fontSize": "2rem",
      "height": 50,
      "lineHeight": 1,
      "minWidth": 50,
      "padding": 0,
    }
  }>
  <svg
    fill="currentColor"
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "color": undefined,
        "verticalAlign": "top",
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m14.8 20v-8.6h-5.7v5.7q0 1.2 0.8 2.1t2 0.8h2.9z m22.8 10v4.3h-25.7v-4.3l2.9-4.3h-2.9q-3.5 0-6-2.5t-2.5-6.1v-7.1l-1.5-1.4 0.7-2.9h10.8l0.7-2.8h21.4l0.7 4.2-1.4 0.8v17.8z" />
    </g>
  </svg>
  <br />
  <div
    style={
      Object {
        "color": "var(--Silver)",
        "fontFamily": "Roboto Mono, monospace",
        "fontSize": ".8rem",
        "lineHeight": 1.5,
        "textTransform": "uppercase",
      }
    }>
    LABEL
  </div>
</button>
`;
